[NAE-2085] Refactor User
- fix tests and other fixes found while testing